--- a/FMML_ClassificationII_Lab2.ipynb
+++ b/FMML_ClassificationII_Lab2.ipynb
@@ -152,7 +152,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 363
         },
-        "outputId": "c179a8eb-ee78-4dfc-f837-763f3ce59f08"
+        "outputId": "68cd54c5-0990-47bb-9768-42b37faa80a7"
       },
       "source": [
         "iris = load_iris()\n",
@@ -186,7 +186,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-febce82a-183b-4b50-89f7-16cef658a4d8\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-75ee6e96-ce19-4380-8f1c-d73c4c9bfdcd\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -310,7 +310,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-febce82a-183b-4b50-89f7-16cef658a4d8')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-75ee6e96-ce19-4380-8f1c-d73c4c9bfdcd')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -362,12 +362,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-febce82a-183b-4b50-89f7-16cef658a4d8 button.colab-df-convert');\n",
+              "        document.querySelector('#df-75ee6e96-ce19-4380-8f1c-d73c4c9bfdcd button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-febce82a-183b-4b50-89f7-16cef658a4d8');\n",
+              "        const element = document.querySelector('#df-75ee6e96-ce19-4380-8f1c-d73c4c9bfdcd');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -387,8 +387,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-4078eba0-b77e-4593-9809-93c058804b87\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-4078eba0-b77e-4593-9809-93c058804b87')\"\n",
+              "<div id=\"df-2aebca5f-f0eb-43ca-8400-46c1fb80301d\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-2aebca5f-f0eb-43ca-8400-46c1fb80301d')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -507,7 +507,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-4078eba0-b77e-4593-9809-93c058804b87 button');\n",
+              "        document.querySelector('#df-2aebca5f-f0eb-43ca-8400-46c1fb80301d button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -516,7 +516,11 @@
               "\n",
               "    </div>\n",
               "  </div>\n"
-            ]
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "dataframe",
+              "summary": "{\n  \"name\": \"#Here is a few samples: The dataset has 4 non-catagorical features and a class which can take of one of the three values\",\n  \"rows\": 10,\n  \"fields\": [\n    {\n      \"column\": \"sepal_length\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"samples\": [\n          \"5.1\",\n          \"6.3\",\n          \"5.8\"\n        ],\n        \"num_unique_values\": 8,\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"sepal_width\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"samples\": [\n          \"2.5\",\n          \"3.3\",\n          \"4.0\"\n        ],\n        \"num_unique_values\": 8,\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"petal_length\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"samples\": [\n          \"1.6\",\n          \"3.0\",\n          \"4.7\"\n        ],\n        \"num_unique_values\": 10,\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"petal_width\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"samples\": [\n          \"0.2\",\n          \"1.1\",\n          \"1.6\"\n        ],\n        \"num_unique_values\": 7,\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Class\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"samples\": [\n          \"0\",\n          \"1\",\n          \"2\"\n        ],\n        \"num_unique_values\": 3,\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"ClassName\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"samples\": [\n          \"setosa\",\n          \"versicolor\",\n          \"virginica\"\n        ],\n        \"num_unique_values\": 3,\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+            }
           },
           "metadata": {},
           "execution_count": 3
@@ -540,7 +544,7 @@
           "height": 911
         },
         "id": "Yxwk-zEuqc9I",
-        "outputId": "9b392188-99ad-4c8a-cdee-092b3c64c9cd"
+        "outputId": "94748c6e-3e9b-4652-8c7c-871ffdc6b4bc"
       },
       "source": [
         "giveAnExample(2)"
@@ -589,7 +593,7 @@
           "height": 206
         },
         "id": "k31oDgYlw2cg",
-        "outputId": "1b1c930b-e28f-42b0-fc87-1d0ebf53994e"
+        "outputId": "5913b252-8ad2-4aa1-cd68-a6f5451a76a5"
       },
       "source": [
         "irisData.sample(n = 5, random_state=0)"
@@ -609,7 +613,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-4e100f08-b26c-41d8-8f04-c2f43707e880\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-a7f85275-3633-4bc6-ab63-99bc570c30c2\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -688,7 +692,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4e100f08-b26c-41d8-8f04-c2f43707e880')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a7f85275-3633-4bc6-ab63-99bc570c30c2')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -740,12 +744,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-4e100f08-b26c-41d8-8f04-c2f43707e880 button.colab-df-convert');\n",
+              "        document.querySelector('#df-a7f85275-3633-4bc6-ab63-99bc570c30c2 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-4e100f08-b26c-41d8-8f04-c2f43707e880');\n",
+              "        const element = document.querySelector('#df-a7f85275-3633-4bc6-ab63-99bc570c30c2');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -765,8 +769,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-508a8144-6c17-4576-9067-707e45aade8d\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-508a8144-6c17-4576-9067-707e45aade8d')\"\n",
+              "<div id=\"df-613964ad-3754-49af-a838-1c0a58ab8907\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-613964ad-3754-49af-a838-1c0a58ab8907')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -885,7 +889,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-508a8144-6c17-4576-9067-707e45aade8d button');\n",
+              "        document.querySelector('#df-613964ad-3754-49af-a838-1c0a58ab8907 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -894,7 +898,11 @@
               "\n",
               "    </div>\n",
               "  </div>\n"
-            ]
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "dataframe",
+              "summary": "{\n  \"name\": \"irisData\",\n  \"rows\": 5,\n  \"fields\": [\n    {\n      \"column\": \"sepal_length\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"samples\": [\n          \"6.0\",\n          \"5.0\",\n          \"5.5\"\n        ],\n        \"num_unique_values\": 5,\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"sepal_width\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"samples\": [\n          \"2.2\",\n          \"3.4\",\n          \"4.2\"\n        ],\n        \"num_unique_values\": 5,\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"petal_length\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"samples\": [\n          \"4.0\",\n          \"1.5\",\n          \"1.4\"\n        ],\n        \"num_unique_values\": 5,\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"petal_width\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"samples\": [\n          \"1.0\",\n          \"1.8\",\n          \"2.4\"\n        ],\n        \"num_unique_values\": 4,\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Class\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"samples\": [\n          \"2\",\n          \"1\",\n          \"0\"\n        ],\n        \"num_unique_values\": 3,\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"ClassName\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"samples\": [\n          \"virginica\",\n          \"versicolor\",\n          \"setosa\"\n        ],\n        \"num_unique_values\": 3,\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+            }
           },
           "metadata": {},
           "execution_count": 5
@@ -918,7 +926,7 @@
           "height": 911
         },
         "id": "FKKqh4_BzB4K",
-        "outputId": "d5826883-57d2-475c-92f6-8a95112aeb28"
+        "outputId": "9e6ec634-4b96-40bd-83bd-bf799d05682d"
       },
       "source": [
         "giveAnExample(3)"
@@ -972,7 +980,7 @@
           "height": 545
         },
         "id": "iJN66PO-4Q0h",
-        "outputId": "3576b43b-5e38-4468-ffd1-28e2efa9def0"
+        "outputId": "937e3526-3445-422a-b553-646c8bcef4b6"
       },
       "source": [
         "clf = tree.DecisionTreeClassifier(random_state = 0, max_depth = 3)\n",
@@ -1011,7 +1019,7 @@
           "height": 545
         },
         "id": "dKnuGzgf6eoZ",
-        "outputId": "97a8cfb0-3fbf-4f37-a1f8-59c50afda885"
+        "outputId": "1e8532c2-5e86-4dc6-a30b-b0f7fed229b3"
       },
       "source": [
         "clf = tree.DecisionTreeClassifier(random_state = 0, max_depth = 3)\n",
@@ -1050,7 +1058,7 @@
           "height": 545
         },
         "id": "eXSDC6Il7wDA",
-        "outputId": "0b76feb9-f16d-4982-a7ca-4ef479ad044c"
+        "outputId": "f583660d-dc0d-4e50-9f58-448a4ede04e5"
       },
       "source": [
         "clf = tree.DecisionTreeClassifier(random_state = 0, max_depth = 3)\n",
@@ -1089,7 +1097,7 @@
           "height": 545
         },
         "id": "r6StxQVn8i01",
-        "outputId": "4f463918-e8c7-4f9c-8149-69b74e291165"
+        "outputId": "fcaa4445-e724-45ef-ec63-72fb54828c55"
       },
       "source": [
         "clf = tree.DecisionTreeClassifier(random_state = 0, max_depth = 3)\n",
@@ -1195,7 +1203,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 363
         },
-        "outputId": "9fe12539-8a4a-4ba5-9fbb-c96e72899d95"
+        "outputId": "8fb61cd9-16aa-43ba-9a4e-81cb80476b79"
       },
       "source": [
         "irisData.sample(n = 10, random_state = 5)"
@@ -1220,7 +1228,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-32fa46cb-e496-43f7-b7c5-bcad78a9cadc\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-56ed0ad3-f859-45c3-8ffb-163cc2ed76e6\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1344,7 +1352,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-32fa46cb-e496-43f7-b7c5-bcad78a9cadc')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-56ed0ad3-f859-45c3-8ffb-163cc2ed76e6')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1396,12 +1404,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-32fa46cb-e496-43f7-b7c5-bcad78a9cadc button.colab-df-convert');\n",
+              "        document.querySelector('#df-56ed0ad3-f859-45c3-8ffb-163cc2ed76e6 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-32fa46cb-e496-43f7-b7c5-bcad78a9cadc');\n",
+              "        const element = document.querySelector('#df-56ed0ad3-f859-45c3-8ffb-163cc2ed76e6');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1421,8 +1429,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-aec57830-ca82-4391-a65e-6623c73c4e65\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-aec57830-ca82-4391-a65e-6623c73c4e65')\"\n",
+              "<div id=\"df-eddd11fd-a1b3-4c94-97fb-3132d831a014\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-eddd11fd-a1b3-4c94-97fb-3132d831a014')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1541,7 +1549,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-aec57830-ca82-4391-a65e-6623c73c4e65 button');\n",
+              "        document.querySelector('#df-eddd11fd-a1b3-4c94-97fb-3132d831a014 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1550,7 +1558,11 @@
               "\n",
               "    </div>\n",
               "  </div>\n"
-            ]
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "dataframe",
+              "summary": "{\n  \"name\": \"irisData\",\n  \"rows\": 10,\n  \"fields\": [\n    {\n      \"column\": \"sepal_length\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"samples\": [\n          \"6.1\",\n          \"5.9\",\n          \"5.8\"\n        ],\n        \"num_unique_values\": 8,\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"sepal_width\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"samples\": [\n          \"2.7\",\n          \"2.6\",\n          \"2.4\"\n        ],\n        \"num_unique_values\": 7,\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"petal_length\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"samples\": [\n          \"1.6\",\n          \"5.6\",\n          \"3.3\"\n        ],\n        \"num_unique_values\": 10,\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"petal_width\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"samples\": [\n          \"1.4\",\n          \"1.0\",\n          \"1.2\"\n        ],\n        \"num_unique_values\": 8,\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Class\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"samples\": [\n          \"1\",\n          \"2\",\n          \"0\"\n        ],\n        \"num_unique_values\": 3,\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"ClassName\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"samples\": [\n          \"versicolor\",\n          \"virginica\",\n          \"setosa\"\n        ],\n        \"num_unique_values\": 3,\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+            }
           },
           "metadata": {},
           "execution_count": 12
